test: validator for github actions

--- a/.github/workflows/validate_files.yml
+++ b/.github/workflows/validate_files.yml
@@ -19,6 +19,4 @@ jobs:
           pip install sqlparse
       - name: Validate Files
         run: |
-          pwd
-          ls
-          ls ${{ github.workspace }}
+          python validator/validate.py
